--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,21 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# Autotools
+Makefile
+Makefile.in
+/autom4te.cache
+/autoscan.log
+/autoscan-*.log
+/aclocal.m4
+/compile
+/config.h.in
+/config.log
+/config.status
+/configure
+/configure.scan
+/depcomp
+/install-sh
+/missing
+/stamp-h1
